--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npx-card",
+  "name": "@ascelinehogge/npx-card",
   "version": "1.0.0",
   "description": "## How to use.",
   "main": "index.js",
